--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "colors": "^1.2.1",
+    "ejs": "^2.5.8",
+    "express": "^4.16.3",
     "get-stdin": "^6.0.0",
-    "mkdirp": "^0.5.1"
+    "jsonwebtoken": "^8.2.1",
+    "mkdirp": "^0.5.1",
+    "mongoose": "^5.0.13",
+    "morgan": "^1.9.0",
+    "npm": "^5.8.0"
   }
 }
